@@ -258,6 +258,7 @@ int regexp_bol_or_eol(const regex_t *preg, const char *string)
 }
 #endif /* HAVE_REGEX_H */
 
+#ifndef DISABLE_SPELLER
 /* Is the word starting at position pos in buf a whole word? */
 bool is_whole_word(size_t pos, const char *buf, const char *word)
 {
@@ -282,6 +283,7 @@ bool is_whole_word(size_t pos, const char *buf, const char *word)
 
     return retval;
 }
+#endif /* !DISABLE_SPELLER */
 
 /* If we are searching backwards, we will find the last match that
  * starts no later than start.  Otherwise we find the first match
